# wtec

./: .env.example  .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml  tmp_kwant_fsyst_introspect.py  transport_progress_primary_20260313T074731_51643f78.jsonl  wtec_project.toml  wtec_slab_template.toml
.devise/: project.yaml
docs/: rgf_engine_design_spec.md  topological_properties.md  transport_engine_rewrite_blueprint.md  wtec_physics_and_implementation.md  wtec_qm_enhancement_blueprint.md
examples/sio2_tap_sio2_small/: run_small.json  sio2_tap_sio2_trilayer.cif
scripts/: generate_nanowire_benchmark_report.py  run_model_a_single_t5_target.py
tests/: test_adaptive_k.py  test_arc_scan_kresolved.py  test_cluster_submit.py  test_delta_h.py  test_dft_dispersion.py  test_force_stress_benchmark.py  test_init_runtime.py  test_kwant_block_extract.py  test_kwant_nanowire_benchmark_resume.py  test_master_config.py  test_metadata_schema.py  test_model_a_single_t5_target.py  test_mpi_builder.py  test_nanowire_benchmark.py  test_nanowire_benchmark_cluster.py  test_nanowire_benchmark_progress.py  test_nanowire_benchmark_report.py  test_orchestrator_json.py  test_pbs_resources.py  test_physics_helper_regressions.py  test_preflight_config.py  test_rgf_helpers.py  test_rgf_native_runner.py  test_rgf_postprocess.py  test_topology_evaluator.py  test_topology_pipeline_reuse.py  test_transport_lead_axis.py  test_transport_mfp.py  test_transport_signature.py  test_variant_severity.py  test_wannier_convergence.py  test_wannier_inputs.py
wtec/: __init__.py  cli.py  rgf.py
wtec/abacus/: __init__.py  inputs.py  parser.py  runner.py
wtec/analysis/: __init__.py  force_stress_benchmark.py  mfp_compare.py  plots.py  thickness_scan.py
wtec/cluster/: mpi.py  pbs.py  ssh.py  submit.py
wtec/config/: cluster.py  materials.py  settings.py
wtec/ext/rgf/: CMakeLists.txt  Makefile  build_on_cluster.sh
wtec/ext/rgf/include/: wtec_mpi_compat.h  wtec_rgf.h  wtec_rgf_internal.h
wtec/ext/rgf/src/: rgf_disorder.c  rgf_hamiltonian.c  rgf_linalg.c  rgf_model.c  rgf_payload.c  rgf_periodic.c  rgf_result.c  rgf_rng.c  rgf_runner.c  rgf_sancho.c  rgf_sweep.c
wtec/qe/: inputs.py  lcao.py  parser.py  pseudopots.py  pw2wan.py
wtec/siesta/: __init__.py  inputs.py  parser.py  presets.py  runner.py  wannier_bridge.py
wtec/slab/: __init__.py  generator.py  report.py  template.py
wtec/structure/: builder.py  defect.py  io.py  metadata_schema.py  supercell.py
wtec/topology/: __init__.py  adaptive_k.py  arc_metrics.py  arc_scan.py  berry_curvature.py  deviation.py  evaluator.py  hr_grid.py  hybridization_gap.py  node_scan.py  surface_gf.py  validation.py  variant_discovery.py  wilson_loop.py  worker.py
wtec/transport/: builder.py  conductance.py  disorder.py  geometry.py  kwant_barrier_benchmark_fixture.py  leads.py  mfp.py  (+10 more)
(+106 files in other folders)
