[build-system]
requires = ["setuptools>=40", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtec"
version = "0.1.0"
description = "Wannier-Tight-binding Electronic transport on Clusters — topological semimetal trilayer workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core runtime dependencies (installed by `wtec init`)
dependencies = [
    "click>=8.1",
    "numpy>=1.24,<2",
    "scipy>=1.10,<1.14",
    "ase>=3.22",
    "pymatgen>=2024.6.10",
    "mp-api>=0.43,<0.44",
    "tbmodels>=1.4",
    "paramiko>=3.0,<4",
    "joblib>=1.3",
    "mpi4py>=3.1",
    "matplotlib>=3.7",
    "sisl>=0.14",
    "wannierberri==1.0.1",
    "ray>=2.10,<3",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
# Install with: wtec init --extra
berry = ["wannierberri==1.0.1", "ray>=2.10,<3"]
full  = ["wtec[berry]"]

[project.scripts]
wtec = "wtec.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wtec*"]
